--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@eva-design/eva": "^2.1.1",
+    "@expo/metro-runtime": "~3.2.1",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/core": "^6.2.1",
     "@react-navigation/drawer": "^6.4.1",
@@ -21,11 +22,12 @@
     "@react-navigation/routers": "^6.1.0",
     "@react-navigation/stack": "^6.2.1",
     "@ui-kitten/components": "5.1.2",
-    "expo": "^51.0.9",
+    "expo": "^51.0.10",
     "expo-font": "~11.10.3",
     "expo-image": "~1.10.6",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-native": "0.73.6",
     "react-native-dropdown-picker": "^5.4.2",
     "react-native-gesture-handler": "~2.14.0",
@@ -35,8 +37,7 @@
     "react-native-screens": "^3.14.1",
     "react-native-svg": "14.1.0",
     "react-native-web": "~0.19.10",
-    "react-dom": "18.2.0",
-    "@expo/metro-runtime": "~3.2.1"
+    "expo-camera": "~15.0.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
