--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "react-native-screens": "^3.14.1",
     "react-native-svg": "14.1.0",
     "react-native-web": "~0.19.10",
-    "expo-camera": "~15.0.10"
+    "expo-camera": "~15.0.10",
+    "expo-splash-screen": "~0.27.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
