--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@react-navigation/routers": "^6.1.0",
     "@react-navigation/stack": "^6.2.1",
     "@ui-kitten/components": "5.1.2",
+    "axios": "^1.7.2",
     "expo": "^51.0.10",
+    "expo-camera": "~15.0.10",
     "expo-font": "~11.10.3",
     "expo-image": "~1.10.6",
     "expo-status-bar": "~1.11.1",
@@ -37,7 +39,7 @@
     "react-native-screens": "^3.14.1",
     "react-native-svg": "14.1.0",
     "react-native-web": "~0.19.10",
-    "expo-camera": "~15.0.10"
+    "expo-location": "~17.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
