--- a/package.json
+++ b/package.json
@@ -25,12 +25,15 @@
     "axios": "^1.7.2",
     "expo": "^51.0.10",
     "expo-camera": "~15.0.10",
+    "expo-device": "^6.0.2",
     "expo-font": "~11.10.3",
     "expo-image": "~1.10.6",
+    "expo-location": "~17.0.1",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-device-info": "^11.1.0",
     "react-native-dropdown-picker": "^5.4.2",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-paper": "^4.12.2",
@@ -39,7 +42,8 @@
     "react-native-screens": "^3.14.1",
     "react-native-svg": "14.1.0",
     "react-native-web": "~0.19.10",
-    "expo-location": "~17.0.1"
+    "expo-application": "~5.9.1",
+    "expo-av": "~14.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
