--- a/package.json
+++ b/package.json
@@ -44,9 +44,7 @@
     "react-native-web": "~0.19.10",
 
     "expo-application": "~5.9.1",
-    "expo-av": "~14.0.5"
-
-    "expo-camera": "~15.0.10",
+    "expo-av": "~14.0.5",
     "expo-splash-screen": "~0.27.5"
 
   },
