--- a/package.json
+++ b/package.json
@@ -24,11 +24,14 @@
     "@ui-kitten/components": "5.1.2",
     "axios": "^1.7.2",
     "expo": "^51.0.10",
+    "expo-application": "~5.9.1",
+    "expo-av": "~14.0.5",
     "expo-camera": "~15.0.10",
     "expo-device": "^6.0.2",
     "expo-font": "~11.10.3",
     "expo-image": "~1.10.6",
     "expo-location": "~17.0.1",
+    "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -40,13 +43,9 @@
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "^3.14.1",
+    "react-native-select-dropdown": "^4.0.1",
     "react-native-svg": "14.1.0",
-    "react-native-web": "~0.19.10",
-
-    "expo-application": "~5.9.1",
-    "expo-av": "~14.0.5",
-    "expo-splash-screen": "~0.27.5"
-
+    "react-native-web": "~0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
