--- a/package.json
+++ b/package.json
@@ -39,12 +39,14 @@
     "react-native-device-info": "^11.1.0",
     "react-native-dropdown-picker": "^5.4.2",
     "react-native-gesture-handler": "~2.14.0",
+    "react-native-gifted-charts": "^1.4.11",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-paper": "^4.12.2",
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "^3.14.1",
     "react-native-select-dropdown": "^4.0.1",
-    "react-native-svg": "14.1.0",
+    "react-native-svg": "^14.1.0",
     "react-native-web": "~0.19.10"
   },
   "devDependencies": {
