--- a/package.json
+++ b/package.json
@@ -48,7 +48,10 @@
     "react-native-screens": "^3.14.1",
     "react-native-select-dropdown": "^4.0.1",
     "react-native-svg": "^14.1.0",
-    "react-native-web": "~0.19.10"
+    "react-native-web": "~0.19.10",
+    "xlsx": "^0.18.5",
+    "expo-file-system": "~17.0.1",
+    "expo-sharing": "~12.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
